--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" media="(max-width: 800px)" href="example.css" />
-    <title>LOGIN-PAGE WFd</title>
+    <title>LOGIN-PAGE </title>
 </head>
 <body>
      
